crates/azalea-core/src/resolver/snapshots/azalea_core__resolver__tests__basic_variable_definition-2.snap
---
source: crates/azalea-core/src/resolver/tests.rs
expression: snapshot
---
RESULT:

'x' has type: Int
