crates/azalea-core/src/resolver/snapshots/azalea_core__resolver__tests__errors_on_empty_scope.snap
---
source: crates/azalea-core/src/resolver/tests.rs
expression: "format! (\"ERROR:\\n\\n{}\", report)"
---
ERROR:

Error (line 1, 0:0): Attempted to pop an empty scope
