crates/azalea-core/src/resolver/snapshots/azalea_core__resolver__tests__errors_on_redefinition-2.snap
---
source: crates/azalea-core/src/resolver/tests.rs
expression: "format! (\"{}\", result_str)"
---
ERROR:

'x' is already defined
