crates/azalea-core/src/resolver/snapshots/azalea_core__resolver__tests__errors_on_redefinition.snap
---
source: crates/azalea-core/src/resolver/tests.rs
expression: "format! (\"{}\", result_str)"
---
RESULT:

'x' defined with type: Int
