crates/azalea-core/src/resolver/snapshots/azalea_core__resolver__tests__function_definition_and_lookup.snap
---
source: crates/azalea-core/src/resolver/tests.rs
expression: "format!(\"STATE: {:#?}\", resolver)"
---
STATE: Resolver {
    scopes: [
        Scope {
            variables: {},
            functions: {
                "test_func": Fn(
                    Function {
                        name: "test_func",
                        args: [
                            (
                                "x",
                                Int,
                            ),
                        ],
                        return_ty: String,
                        body: None,
                        body_expr: None,
                    },
                ),
            },
        },
    ],
}
