crates/azalea-core/src/resolver/snapshots/azalea_core__resolver__tests__function_redefinition_error.snap
---
source: crates/azalea-core/src/resolver/tests.rs
expression: "format! (\"ERROR:\\n\\n{}\", report)"
---
ERROR:

Error (line 1, 0:0): Redefined variable: test_func
