crates/azalea-core/src/resolver/snapshots/azalea_core__resolver__tests__valid_nested_scopes-2.snap
---
source: crates/azalea-core/src/resolver/tests.rs
expression: "format! (\"{}\", result_str)"
---
RESULT:

'y' defined with type: String
