crates/azalea-core/src/resolver/snapshots/azalea_core__resolver__tests__valid_nested_scopes-3.snap
---
source: crates/azalea-core/src/resolver/tests.rs
expression: "format!(\"STATE: {:#?}\", resolver)"
---
STATE: Resolver {
    scopes: [
        Scope {
            variables: {
                "x": Int,
            },
            functions: {},
        },
    ],
}
